# GMExtensionBase

./: .gitignore  CMakeLists.txt  GMExtensionBase.resource_order  GMExtensionBase.yyp  LICENSE  README.md  inject-docs.py  requirements.txt
extensions/GMExtensionBase/: GMExtensionBase.yy  libGMExtensionBase.dylib
include/: Extension_Interface.h  Ref.h  YYRValue.h
objects/OMain/: Create_0.gml  OMain.yy  Other_70.gml
options/main/: options_main.yy
rooms/Room1/: Room1.yy
src/: dllmain.cpp
